tests/rosetta/out/Swift/15-puzzle-solver.error
run error: exit status 1
/tmp/TestMochiToSwift15-puzzle-solver1784582935/001/main.swift:2:7: error: cannot find 'testpkg' in scope
1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T11:39:20Z
2 | print(testpkg.FifteenPuzzleExample())
  |       `- error: cannot find 'testpkg' in scope
3 | 
