tests/rosetta/out/Swift/15-puzzle-solver.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:39:20Z
print(testpkg.FifteenPuzzleExample())
